fixed buggy collapse-expand mecanism (css)

--- a/fluxtream-web/src/main/webapp/less/flx.less
+++ b/fluxtream-web/src/main/webapp/less/flx.less
@@ -1107,7 +1107,7 @@ body.photoCarouselViewing{
 }
 
 .flx-collapsed {
-  visibility: hidden;
+  display: none;
   height: 0px;
 }
 
